--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,8 +21,11 @@ serde_json = "1"
 tracing = "0.1"
 anyhow = "1.0.98"
 uuid = { version = "1.16.0", features = ["v4"] }
-async-trait = "0.1.88"
 lapin = { version = "2.5.3", features = ["serde_json"] }
 
 [dev-dependencies]
-testcontainers = "0.14"
+testcontainers = "0.23"
+
+
+[features]
+lapin = []
