--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,7 +16,8 @@
 				"rust-lang.rust-analyzer",
 				"ZhangYue.rust-mod-generator",
 				"vadimcn.vscode-lldb",
-				"tamasfe.even-better-toml"
+				"tamasfe.even-better-toml",
+				"Swellaby.vscode-rust-test-adapter"
 			]
 		}
 	}
