--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,9 @@ log = "0.4.27"
 
 [dev-dependencies]
 testcontainers = "0.23"
+testcontainers-modules = { version = "0.11", features = ["rabbitmq"] }
+tokio-test = "0.4"
+serde = { version = "1", features = ["derive"] }
 
 
 [features]
