--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,40 +2,58 @@ name: CI
 
 on:
   push:
-    tags: ["v*"]
+    branches: [ "main", "develop" ]
+  pull_request:
+    branches: [ "main", "develop" ]
 
 jobs:
-  # test:
-  #   runs-on: ubuntu-latest
-  #   services:
-  #     rabbitmq:
-  #       image: rabbitmq:3-management
-  #       ports:
-  #         - 5672:5672
-  #         - 15672:15672
-  #       options: >-
-  #         --health-cmd "rabbitmq-diagnostics -q ping"
-  #         --health-interval 10s
-  #         --health-timeout 5s
-  #         --health-retries 5
+  test:
+    name: Test Suite
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - uses: actions-rs/toolchain@v1
-  #       with:
-  #         toolchain: stable
-  #         override: true
-  #     - run: cargo test
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          components: clippy, rustfmt
 
-  publish:
-    name: Publish to Crates.io
-    # needs: test
-    if: startsWith(github.ref, 'refs/tags/v')
+      - name: Cache cargo registry
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-
+
+      - name: Check formatting
+        run: cargo fmt --all -- --check
+
+      - name: Run clippy
+        run: cargo clippy --all-targets --all-features -- -D warnings
+
+      - name: Build
+        run: cargo build --verbose
+
+      - name: Run tests with Docker (testcontainers)
+        run: cargo test --verbose
+        env:
+          RUST_LOG: debug
+
+  security-audit:
+    name: Security Audit
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          override: true
-      - run: cargo publish --token ${{ secrets.CARGO_REGISTRY_TOKEN }} --color always
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@stable
+      - name: Install cargo-audit
+        run: cargo install cargo-audit
+      - name: Run security audit
+        run: cargo audit
