--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,12 @@ on:
     branches: [ "main", "develop" ]
   pull_request:
     branches: [ "main", "develop" ]
+  workflow_dispatch:
+    inputs:
+      toolchain:
+        description: 'Toolchain to use'
+        required: true
+        default: 'stable'
 
 jobs:
   test:
