--- a/.github/workflows/maintenance.yml
+++ b/.github/workflows/maintenance.yml
@@ -4,7 +4,12 @@ on:
   schedule:
     # Run every Monday at 9 AM UTC
     - cron: '0 9 * * 1'
-  workflow_dispatch: # Allow manual trigger
+  workflow_dispatch:
+    inputs:
+      toolchain:
+        description: 'Toolchain to use'
+        required: true
+        default: 'stable'
 
 jobs:
   dependency-check:
