--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ anyhow = "1.0.98"
 uuid = { version = "1.16.0", features = ["v4"] }
 lapin = { version = "2.5.3", default-features = false, features = ["serde_json", "openssl"] }
 log = "0.4.27"
+backoff = { version = "0.4.0", features = ["tokio"] }
 
 [dev-dependencies]
 testcontainers = "0.25"
